force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/cdcpc__RD_ControlPlan_Translation__c.object-meta.xml
<CustomObject>
    <label>RD ControlPlanTranslation</label>
    <nameField>
        <label>RD ControlPlanTranslation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ControlPlanTranslation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>