force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/fields/cdcpc__Filter_Num5__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Filter_Num5__c</fullName>
    <formula>IF( NOT(ISBLANK(cdcpc__Num5__c)),
	&quot; AND NumVal5__c &quot; + cdcpc__NumOpp5__c + &quot; {{N:&quot; + LOWER(cdcpc__Num5__c) + &quot;}}&quot;,
	&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Num5</label>
    <type>Text</type>
</CustomField>