force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/fields/cdcpc__Filter_Num6__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Filter_Num6__c</fullName>
    <formula>IF( NOT(ISBLANK(cdcpc__Num6__c)),
	&quot; AND NumVal6__c &quot; + cdcpc__NumOpp6__c + &quot; {{N:&quot; + LOWER(cdcpc__Num6__c) + &quot;}}&quot;,
	&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Num6</label>
    <type>Text</type>
</CustomField>