force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/fields/cdcpc__Filter_Text5__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Filter_Text5__c</fullName>
    <formula>IF(
	NOT(ISBLANK(cdcpc__Text5__c)),
	&quot; AND Text5Val__c &quot; +
		IF(cdcpc__TextOpp5__c = &quot;=ORDASH&quot;, &quot; IN (&apos;-&apos;, &quot;, cdcpc__TextOpp5__c + &quot; &quot;) + &quot;{{T:&quot; + LOWER(cdcpc__Text5__c) + &quot;}}&quot; +

		IF(cdcpc__TextOpp5__c = &quot;=ORDASH&quot;, &quot;)&quot;, &quot;&quot;)



, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Text5</label>
    <type>Text</type>
</CustomField>