force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/fields/cdcpc__Num5__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Num5__c</fullName>
    <label>Num5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>