force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/fields/cdcpc__NumOpp6__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NumOpp6__c</fullName>
    <label>NumOpp6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>