force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/fields/cdcpc__TextOpp6__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TextOpp6__c</fullName>
    <label>TextOpp6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>