force-app/main/default/objects/cdcpc__RD_ControlPlan_Translation__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__Test_OPNO__c</columns>
    <columns>NAME</columns>
    <columns>cdcpc__Text1__c</columns>
    <columns>cdcpc__Text2__c</columns>
    <columns>cdcpc__Text3__c</columns>
    <columns>cdcpc__Text4__c</columns>
    <columns>cdcpc__Text5__c</columns>
    <columns>cdcpc__Text6__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Test_OPNO__c</field>
        <operation>equals</operation>
        <value>9630</value>
    </filters>
    <label>All Records</label>
</ListView>